--- a/csv-table-reader/package.json
+++ b/csv-table-reader/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
@@ -39,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard": "^25.0.0"
   }
 }
